[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit"
version = "0.0.0"
requires-python = ">= 3.8"
authors = [{ name = "Robaire Galliath" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
docs = ["sphinx", "sphinx-autodoc-typehints"]
test = ["pytest"]
lint = ["black", "isort"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.isort]
profile = "black"
