[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproj"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{ name = "Robaire Galliath" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
testpaths = ["test"]
addopts = ["--import-mode=importlib"]
